Refactor download defaults into global config
